Don't initialize function pointers with G_TYPE_INVALID

https://bugs.freedesktop.org/show_bug.cgi?id=94310
Reviewed-by: George Kiagiadakis