src/mcd-account.c
@@ -98,7 +98,7 @@ static const McdInterfaceData account_interfaces[] = {
         account_external_password_storage,
         MC_IFACE_ACCOUNT_INTERFACE_EXTERNAL_PASSWORD_STORAGE),
 
-    { G_TYPE_INVALID, }
+    { NULL, }
 };
 
 G_DEFINE_TYPE_WITH_CODE (McdAccount, mcd_account, G_TYPE_OBJECT,
